# rpoisel

./: .gitignore  .pre-commit-config.yaml  .yamlfmt  .yamllint.yaml  LICENSE  README.md  flake.nix  mise.toml  pyproject.toml
rpoisel/: __init__.py  app.py  generator.py  process.py  qemu.py  qmp.py  util.py
src/rpoisel/: __init__.py  app.py  qemu.py  qmp.py
src/rpoisel/commands/: __init__.py  browser.py  elisp.py  modules.py  power.py  print.py  screen.py  sleep.py  vm.py
src/rpoisel/util/: __init__.py  process.py
tests/: test_elisp_generator.py  test_print_command.py
