[project]
name = "rpoisel"
version = "0.1.0"
description = "Control system scripts"
maintainers = [
  { name = "Rainer Poisel", email = "rainer@honeytreelabs.com" },
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "rapidfuzz>=3.11.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[project.scripts]
rpoisel = "rpoisel:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "D", # pydocstyle
  "F", # pyflakes
  # "I", # isort
  # "UP", # pyupgrade
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  "D107", # Missing docstring in `__init__`
  "D205", # 1 blank line required between summary line and description
  "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party = ["rpoisel", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests",
]
log_cli = true
log_cli_level = "INFO"
